fix topic title overlap

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -153,6 +153,80 @@ img::-moz-selection {
 .new-about {
   margin-top: 200px;
 }
+.resource-item {
+  overflow: auto;
+}
+
+@media (max-width: 1440px) {
+  .item-title {
+
+    font-size: 1.1vw !important;
+  }
+}
+
+@media (max-width: 1280px) {
+  .item-title {
+
+    font-size: 1.2vw !important;
+  }
+}
+
+@media (max-width: 1120px) {
+  .item-title {
+
+    font-size: 1.3vw !important;
+  }
+}
+
+@media (max-width: 991px) {
+  .item-title {
+
+    font-size: 1.8vw !important;
+  }
+}
+
+@media (max-width: 805px) {
+  .item-title {
+
+    font-size: 1.9vw !important;
+  }
+}
+
+@media (max-width: 710px) {
+  .item-title {
+
+    font-size: 2.2vw !important;
+  }
+}
+
+@media (max-width: 580px) {
+  .item-title {
+
+    font-size: 2.5vw !important;
+  }
+}
+@media (max-width: 550px) {
+  .item-title {
+
+    font-size: 2.7vw !important;
+  }
+}
+
+@media (max-width: 460px) {
+  .item-title {
+
+    font-size: 3.1vw !important;
+  }
+}
+
+
+@media (max-width: 400px) {
+  .item-title {
+
+    font-size: 3.3vw !important;
+  }
+}
+
 @media (max-width: 768px) {
   .new-about {
     margin: 0;
@@ -509,10 +583,25 @@ footer p {
   }
 }
 @media (max-width: 1199px) {
+  .topics-page .feature-topic .feature-image  {
+    width:350px;
+  }
   ul.banner-social-buttons {
     margin-top: 15px;
   }
 }
+
+@media (max-width: 1199px) {
+  .topics-page .feature-topic .feature-image {
+  float: left;
+  margin-right: 20px;
+  margin-bottom: 25px;
+  width: 300px !important;
+
+}
+}
+
+
 @media (max-width: 767px) {
   ul.banner-social-buttons li {
     display: block;
@@ -566,6 +655,7 @@ footer p {
   margin-right: 20px;
   margin-bottom: 25px;
   width: 400px;
+
 }
 @media (min-width: 319px) {
   .topics-page .feature-topic .feature-text {
@@ -607,6 +697,11 @@ footer p {
   border-radius: 5px !important;
   background-color: rgba(255, 255, 255, 0.3);
 }
+
+.topics-page .resource-item .item-title {
+  overflow-y: visible;
+}
+
 .topics-page .resource-item img {
   width: 190px;
   height: 120px;
@@ -664,6 +759,7 @@ footer p {
   border-radius: 5px !important;
 }
 .topics-page .nav .nav-search {
+  
   margin-left: 10px;
 }
 .topics-page .topic-resources {
@@ -680,6 +776,14 @@ footer p {
 .topics-page .tabs-padding {
   padding: 0;
 }
+
+@media (min-width: 769px) and (max-width: 850px) {
+.topics-page .search {
+    width: 21%;
+  }
+}
+
+
 @media (min-width: 737px) and (max-width: 768px) {
   .topics-page .feature-image {
     width: 265px !important;
@@ -725,7 +829,7 @@ footer p {
     display: none;
   }
   .topics-page .item-title {
-    font-size: 22px !important;
+    font-size: 22px ;
     font-weight: bold;
     margin-bottom: 10px;
   }
@@ -743,7 +847,8 @@ footer p {
     margin-left: 5%;
   }
   .topics-page .search {
-    width: 31%;
+   margin-top: 15px;
+    width: 38%;
   }
   .topics-page .tabs-row {
     margin-left: 0;
@@ -759,7 +864,7 @@ footer p {
     display: none;
   }
   .topics-page .item-title {
-    font-size: 18px !important;
+    font-size: 18px;
     font-weight: bold;
     margin-bottom: 10px;
   }
@@ -777,7 +882,8 @@ footer p {
     margin-left: 5%;
   }
   .topics-page .search {
-    width: 38%;
+   
+    width: 21%;
   }
   .topics-page .tabs-row {
     margin-left: 0;
@@ -793,7 +899,7 @@ footer p {
     display: none;
   }
   .topics-page .item-title {
-    font-size: 18px !important;
+    font-size: 18px;
     font-weight: bold;
     margin-bottom: 10px;
   }
@@ -828,7 +934,7 @@ footer p {
     display: none;
   }
   .topics-page .item-title {
-    font-size: 18px !important;
+    font-size: 18px ;
     font-weight: bold;
     margin-bottom: 10px;
   }
